fix-visible-img

--- a/css/main.css
+++ b/css/main.css
@@ -137,10 +137,6 @@ a {
   animation-duration: 1.5s;
 }
 
-.gallery__img-1 {
-	animation-delay: 0;
-}
-
 .gallery__img-2 {
 	animation-delay: 0.2s;
 }
@@ -208,6 +204,7 @@ a {
 
 .contact__img {
 	width: 303px;
+	min-width: 303px;
 	height: 340px;
 	margin-top: -26px;
 }
@@ -232,7 +229,7 @@ a {
 }
 
 .form__name, .form__email, .form__message {
-	background: rgba(.0,.0,.0,0);
+	background: rgba(0,0,0,0);
 	color: #fff;
 	font-size: 14px;
 	border: none;
@@ -285,7 +282,7 @@ textarea:focus, input:focus {
 .form__btn {
 	width: 100px;
 	height: 33px;
-	background: rgba(.0,.0,.0,0);
+	background: rgba(0,0,0,0);
 	font-size: 10px;
 	font-weight: bold;
 	color: #ad7835;
@@ -375,7 +372,6 @@ textarea:focus, input:focus {
 	height: 100%;
 	left: 0%;
 	top: 0%;
-	z-index: 345345s;
 }
 
 .modal__img {
@@ -383,7 +379,6 @@ textarea:focus, input:focus {
 	max-width: 95vw;
 	max-height: 95vh;
 	position: absolute;
-	z-index: 921423423423;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
@@ -396,6 +391,10 @@ textarea:focus, input:focus {
 	.gallery__img-4, .gallery__img-3 {
 		height: 233px;
 		margin-top: 35px;
+	}
+
+	.footer {
+		margin-bottom: 100px;
 	}
 }
 
@@ -426,10 +425,6 @@ textarea:focus, input:focus {
 		height: auto;
 		margin-top: 10px;
 		margin: 0 auto;
-	}
-
-	.footer {
-		margin-bottom: 100px;
 	}
 }
 
@@ -468,7 +463,8 @@ textarea:focus, input:focus {
 
 	.contact__img {
 		width: 100%;
-		height: auto;
+		min-width: 100%;
+		height: 100%;
 	}
 
 	.contact__form {
@@ -506,9 +502,7 @@ textarea:focus, input:focus {
 @media (max-width: 580px) {
 	.characteristic {
 		width: 390px;
-		padding-top: 15px;
-		padding-bottom: 20px;
-		padding-left: 15px;
+		padding: 15px;
 	}
 }
 
@@ -529,6 +523,7 @@ textarea:focus, input:focus {
 		height: auto;
 		padding-left: 10px;
 		padding-right: 10px;
+		padding-bottom: 10px;
 	}
 
 	.characteristic__text {
